[package]
name = "coinlist"
version = "0.2.0"
description = "Parses lists of coins."
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/coinlist"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem", "coin", "aptos", "sui"]

[lib]
name = "coinlist"
path = "src/lib.rs"

[features]
default = []
address20 = ["struct-tag/address20"]
address32 = ["struct-tag/address32"]

[dependencies]
struct-tag = "0.2"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono", "url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
url = { version = "^2.2", features = ["serde"] }

[badges]
github = { repository = "movingco/coinlist", workflow = "Rust" }
